# multimodal-rag-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
filemanager/filemanager/: settings.py  urls.py
filemanager/video/: admin.py  models.py
