[project]
name = "filemanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref>=3.10.0",
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.7",
    "django-cleanup>=9.0.0",
    "django-crispy-forms>=2.4",
    "django-unfold>=0.69.0",
    "sqlparse>=0.5.3",
]
